--- a/public/styles.css
+++ b/public/styles.css
@@ -1,25 +1,27 @@
-input[type='submit'] {
-    display:block;
-    margin:10px auto;
-    border-radius:5px;
+body{
+    font-family:Arial, Helvetica, sans-serif;
+}
+h1{
+    text-align: center;
 }
 
-input[type='text']{
-    display:block;
-    margin:auto;
-    width:400px;
-    padding:10px;
-    border-radius:5px;
+input{
+    width: 450px;
+}
+.input-container{
+    margin: 20px 0;
 }
 
-.container{
-    background:rgb(170, 170, 231);
+.main-container{        
+    background: #4AC29A;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #BDFFF3, #4AC29A);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #BDFFF3, #4AC29A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     display:block;
     justify-content: center;
     align-items: center;
-    width: 400px;
-    height:300px;
-    margin:150px auto;
-    text-align: center;
+    width: 700px;
+    height:500px;
     padding: 50px 50px;
+    border-radius:10px;
+    margin:auto;
 }
